src/index.css
@import "tailwindcss";

@font-face {
	font-family: 'inter';
	src: url('/fonts/Inter-VariableFont_opsz,wght.ttf');
}

body,html {
	width: 100%;
	height: 100%;
	box-sizing: border-box;
	background: hsl(270, 50%, 1%);
	color: var(--color-white);
	scroll-behavior: smooth;
	font-family: var(--font-family);

	::-webkit-scrollbar {
		border-left: 1px solid rgba(255, 255, 255, 0.15);
		width: 7px;
	}
	
	::-webkit-scrollbar-button {
		display: none;
	}
	
	::-webkit-scrollbar-track {
		margin: 10px 0px;
	}
	
	::-webkit-scrollbar-thumb{
		background: hsl(0, 0%, 25%);
		border-radius: 10px;
		width: 1px;
	}
	
	::selection{
		background-color: var(--color-accent);
		color: black;
	}
}


:root{
	--color-white: hsl(0, 0%, 100%);
	--color-accent: hsl(264, 100%, 67%);
	--color-secondary: hsl(264, 63%, 24%);
	--font-family: 'inter'
}

@theme {
	--bg-background: hsl(270, 50%, 1%);
	
	--color-white: var(--color-white);
	--color-accent: var(--color-accent);
	--color-secondary: 
	
	--border-white: var(--color-white);

	--inset-shadow-md: inset 0px 0px 6px 2px  var(--color-white);
	--inset-shadow-sm: inset 0px 0px 6px 2px  hsl(0, 0%, 100%, 0.25);
	--inset-shadow-gray: inset 0px 0px 6px 2px  hsl(0, 0%, 50%, 0.5);
	--shadow-md: 0px 0px 6px 2px  var(--color-white);
	--shadow-xl: 0px 0px 100px 5px  var(--color-white);
	--font-main: var(--font-family);
	
	--animate-shine: shine 7s ease-in infinite;

	@keyframes shine {
		0% {
			background-color: hsla(0, 0%, 100%, 0.3);;
			left: -20px
		}
		15% {
			background-color: hsla(0, 0%, 100%, 0.3);;
			left: 300px
		}
		16%{
			background-color: transparent;
		}
		99%{
			background-color: transparent;
		}
		100% {
			background-color: hsla(0, 0%, 100%, 0.3);;
			left: -20px
		}
	}
}

.h2 {
	@apply sm:text-6xl text-4xl font-medium 
}

